keycloak/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: auth.<YOUR_DOMAIN>
    http:
      paths:
      - backend:
          service:
            name: keycloak-http
            port:
              name: http
        path: /
        pathType: Prefix
